corrected overflow scroll on team page

--- a/dev/blocks/big-team/big-team-desktop.scss
+++ b/dev/blocks/big-team/big-team-desktop.scss
@@ -1,6 +1,7 @@
 .big-team {
   background-color: #fff;
   // background-color: #f8f9fe;
+    overflow-x: hidden;
 }
 
 .big-team__wrapper {
